syntax = "proto3";

option java_package = "com.app.proto";
option java_multiple_files = true;

message LevelsProto {
  int32 id = 1;
  string name = 2;
}

message  UserProto{
  string user_id = 1;
  int32 curRepeatDays = 2;
  int32 maxRepeatDays = 3;
  int32 countFullLearnedWords = 4;
  int32 countLearningWords = 5;
  int32 countKnewWords = 6;
  repeated LevelsProto listOfLevels = 7;
  bool checkBritishVariables = 8;
}